# eternal

./: .gitignore  Cargo.toml  GEMINI.md
.cargo/: config.toml
assets/config/: flora.ron  tiles.ron
assets/config/procgen/: atlas.ron  biomes.ron  complex_world.ron  map.ron
assets/config/procgen/forest/: flora.ron  flora_noise.ron  pallet.ron  terrain.ron  terrain_pallet.ron
assets/shaders/: tilemap_chunk_material.wgsl
assets_src/debug/: tilemap_debug.pxo
assets_src/sheets/: flora.pxo  impact.pxo  looking_at.pxo  player.pxo  swipe.pxo  terrain.pxo  untitled.pxo
assets_src/sheets/terrain/: Dirt.pxo  Grass.pxo  Sand.pxo  Stone.pxo  Water.pxo
assets_src/ui/9_slice/: frame.pxo  window.pxo
crates/client/: Cargo.toml
crates/client/src/: lib.rs  main.rs  run_conditions.rs
crates/client/src/config/: mod.rs  tile.rs
crates/client/src/debug/: camera.rs  diagnostics.rs  inspector.rs  mod.rs  ui_settings.rs  ui_tile_map.rs
crates/client/src/effects/: pixel_perfect.rs  swipe.rs
crates/client/src/player/: controller.rs  physics.rs
crates/client/src/ui/: controls.rs  mod.rs
crates/client/src/world/: actions.rs  genesis.rs  mod.rs  physics.rs
crates/client/src/world/renderer/: mod.rs
crates/client/src/world/renderer/tilemap/: material.rs  mod.rs
crates/config/: Cargo.toml
crates/config/src/: biome.rs  color.rs  flora.rs  lib.rs  loader.rs  noise.rs  server.rs  tile.rs
crates/editor/: Cargo.toml
crates/editor/src/: camera.rs  lib.rs
crates/editor/src/atlas_editor/: mod.rs
crates/editor/src/map_editor/: mod.rs  ui.rs
crates/grid/: Cargo.toml
crates/grid/src/: ecs.rs  grid.rs  lib.rs  tile.rs
crates/procgen/: Cargo.toml
crates/procgen/examples/: atlas.rs
crates/procgen/src/: atlas.rs  biome.rs  lib.rs  map.rs  noise.rs
crates/procgen/src/noise/: mod.rs  send_worley.rs  stack.rs
crates/ui/: Cargo.toml
crates/ui/src/: window.rs
examples/: empty.rs
prompts/: tilemap_blending.md
prompts/design/: tilemap_rendering_design.md
src/: main.rs  noise.rs
src/config/: color.rs  tile.rs
src/debug/: camera.rs  draw_grids.rs  inspector.rs  mod.rs  ui_display_map.rs  ui_settings.rs  ui_tile_map.rs  ui_tilemap_chunk.rs
src/effects/: impact.rs  mod.rs  pixel_perfect.rs  swipe.rs
src/player/: actions.rs  camera.rs  controller.rs  mod.rs  physics.rs  pixel_perfect.rs
src/tilemap/: material.rs  mod.rs
src/ui/: mod.rs  window.rs
src/world/: actions.rs  genesis.rs  grid.rs  map.rs  mod.rs  physics.rs  tile.rs
src/world/renderer/: mod.rs
src/world/renderer/tilemap/: material.rs  mod.rs
