[package]
name = "eternal"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
default-members = ["crates/client", "crates/procgen"]

[workspace.dependencies]
eternal_config = { path = "crates/config" }
eternal_grid = { path = "crates/grid" }
eternal_procgen = { path = "crates/procgen" }

bevy = { version = "0.17"  }
avian2d = { version = "0.4" }

bytemuck = "1.23.2"
thiserror = { version = "2", default-features = false }

ron = { version = "0.11", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

bevy_egui = { version = "0.37", default-features = false }
bevy-inspector-egui = { version = "0.34" }


[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
