[package]
name = "eternal_client"
version = "0.1.0"
edition = "2024"
default-run = "client"

[dependencies]
bevy.workspace = true
avian2d.workspace = true


bytemuck.workspace = true
thiserror.workspace = true

ron.workspace = true
serde.workspace = true

bevy_egui.workspace = true
bevy-inspector-egui.workspace = true

noise = "0.9"

[[bin]]
name = "client"
path = "bin/main.rs"

[[bin]]
name = "atlas_editor"
path = "bin/atlas_editor.rs"

[features]
default = ["dev", "experimental"]
dev = [
    "bevy/dynamic_linking",
    "bevy/track_location",
]
experimental = [
    "bevy/experimental_bevy_feathers",
]
