[package]
name = "eternal_client"
version = "0.1.0"
edition = "2024"
default-run = "client"

[dependencies]
eternal_grid.workspace = true
eternal_config.workspace = true

bevy.workspace = true
avian2d.workspace = true


bytemuck.workspace = true
thiserror.workspace = true

ron.workspace = true
serde.workspace = true

bevy_egui.workspace = true
bevy-inspector-egui.workspace = true

noise = "0.9"

[lints]
workspace = true

[[bin]]
name = "client"
path = "bin/main.rs"

[features]
default = ["dev", "experimental"]
dev = [
    "bevy/dynamic_linking",
    "bevy/track_location",
]
experimental = [
    "bevy/experimental_bevy_feathers",
]
