[package]
name = "eternal_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
eternal_grid.workspace = true
eternal_procgen.workspace = true

bevy.workspace = true

bevy_egui.workspace = true
bevy-inspector-egui.workspace = true

[lints]
workspace = true

[[bin]]
name = "editor"
path = "bin/main.rs"

[features]
default = ["dev", "experimental"]
dev = [
    "bevy/dynamic_linking",
    "bevy/track_location",
]
experimental = [
    "bevy/experimental_bevy_feathers",
]
