[package]
name = "eternal_procgen"
version = "0.1.0"
edition = "2024"

[dependencies]
eternal_grid.workspace = true

bevy.workspace = true

noise = "0.9"

[dev-dependencies]
eternal_grid.workspace = true
eternal_procgen.workspace = true

bevy_egui.workspace = true
bevy-inspector-egui.workspace = true

[[example]]
name = "atlas"
path = "examples/atlas.rs"

[features]
default = ["dev", "experimental"]
dev = [
    "bevy/dynamic_linking",
    "bevy/track_location",
    "bevy/bevy_dev_tools",
    "bevy/debug",
    "bevy/file_watcher",
]
experimental = [
    "bevy/experimental_bevy_feathers",
]
